--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <button class="w3-bar-item w3-button" onclick="openKota('Mini4')">THE LORDE</button>
             </div>
     </div>
+<button class="w3-bar-item w3-button" onclick="openKota('profile')">Profile</button>
 </div>
 
 <div id="Bandung" class="w3-container kota w3-animate-top" style="display:none">
@@ -477,6 +478,18 @@
     <p>THE LORDE is a joke hidden boss exclusive to the Get fixed boi seed. It is one of the three hidden bosses exclusive to the seed, and utilizes the various Boss AIs throughout the game.
     Its only unique drop is the Suspicious Looking NO U, a light pet item.
     </p>
+    </center>
+    </div>
+</div>
+
+<div id="profile" class="w3-container kota w3-animate-top" style="display:none"> 
+<h2>Profile</h2>
+    <div class="w3-panel w3-text-black w3-red">
+    <center>
+    <tr><h2>Raditya Reskyananta Saputra</h2>
+    <td></td><img src="css/bangbruno.jpg" alt="">
+    <h2>10123255</h2>
+    <h2>IF-6</h2>
     </center>
     </div>
 </div>
